Added ckeditor and like button

--- a/app/views/posts/show_single_post.html.erb
+++ b/app/views/posts/show_single_post.html.erb
@@ -1,3 +1,53 @@
 <h1>Page to show single lesson by user</h1>
+<h2>Grade: <%= @post.grade.level %></h2>
+<h2>Category: <%= @post.category.name %></h2>
+<h2>Subject: <%= @post.subject.name %></h2>
+<h2>Your lesson: <%= @post.content %></h2>
+<h2>Number of votes: <%= @post.vote_count %></h2>
 
-<p>Your lesson:<%= @post.content %></p>
+<% if @post.votes.where(user_id: current_user).empty? %>
+<form action="/votes" method="post">
+	<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+	<input type="hidden" name="post_id" value="<%= @post.id %>">
+	<input type="hidden" name="user_id" value="<%= current_user.id %>">
+	<input type="submit" value="Upvote" class="btn btn-success">
+</form>
+<% else %>
+<form action="/votes" method="post">
+	<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+	<input type="hidden" name="post_id" value="<%= @post.id %>">
+	<input type="hidden" name="user_id" value="<%= current_user.id %>">
+	<input type="submit" value="Upvote" class="btn btn-success" disabled>
+</form>
+
+<% end %>
+<form action="/reviews" method="post">
+	<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+	<input type="hidden" name="post_id" value="<%= @post.id %>">
+	<input type="hidden" name="user_id" value="<%= current_user.id %>">
+	<textarea name="comment"></textarea>
+	<select name="rating">
+		<option value="1">1 Star</option>
+		<option value="2">2 Star</option>
+		<option value="3">3 Star</option>
+		<option selected="selected" value="4">4 Star</option>
+	</select>
+	<input type="submit" value="add review">
+</form>
+
+<div class="col-md-10">
+<% @reviews.each do |r| %>
+<div class="col-md-12">
+<p>Rating: <%= r.rating %></p>
+<p><%= r.user.first_name %> says:</p>
+
+<div class="well col-md-8">
+	<%= r.comment %>
+</div>
+</div>
+<hr>
+<% end %>
+</div>
+
+
+
