--- a/app/views/posts/upload.html.erb
+++ b/app/views/posts/upload.html.erb
@@ -1,11 +1,21 @@
-<h3>
-<p><%= @grade.level %></p>
-<p><%= @category.name %></p>
-<%= @subject.name %>
-<%= @lesson.title %>
+<div class='col-md-10'>
+<h3>Grade: <%= @grade.level %></h3>
+<h3>Subject: <%= @category.name %></h3>
+<h3>Topic: <%= @subject.name %></h3>
+<h3>Lesson: <%= @lesson.title %></h3>
 
 <form action="/posts/create_lesson" method="post">
 	<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-	<textarea name="content"></textarea>
-	<input type="submit" value="submit">
+	<div class="form-group">
+	<textarea name="content" class="form-control"></textarea>
+	</div>
+	<div class="form-group">
+	<input type="submit" value="submit" class="btn btn-primary">
+	</div>
 </form>
+
+
+        <script>
+            CKEDITOR.replace( 'content' );
+        </script>
+</div>
