--- a/app/views/posts/category_question.html.erb
+++ b/app/views/posts/category_question.html.erb
@@ -1,11 +1,73 @@
-<form action="/posts/send_category" method="post">
-	<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
-	<select name="question" id="question">
-		<% @grades.find(@grade_id).categories.each do |category| %>
-			<option value="<%= category.id %>"><%= category.name %></option>
-		<% end %>
-	</select>
-	<input type="submit" value="Next" id="continue" class="btn btn-success">
-</form>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<style>
+		.container {
+			display: inline-block;
+			margin-top: 150px;
+		}
+
+		.questionone {
+			margin: 0px auto;
+			text-align: center;
+		}
+
+		#selecting {
+			margin: 0px auto;
+			text-align: center;
+
+		}
+
+		#box{
+			width: 700px;
+			height: 450px;
+			background-color: white;
+			text-align: center;
+			margin: 0px auto;
+			padding-top: 120px;
+			border: 1px solid silver;
+			border-radius: 10px;
+		}
+
+		#wrapper {
+			background-color: #65BAD3;
+			height: 780px;
+		}
+	</style>
+
+
+<body>
+	<div id="wrapper">
+	<div class="poop text-center">
+		<div class="container text-center">
+			<div id="box" class="row text-center">
+				<div class="questionone" class="text-center col-md-12">
+					<h3>What category are you teaching?</h3>
+					<form action="/posts/send_category" method="post" id="form_question">
+						<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+						<div class="form-group col-md-6 col-md-push-3" id="selecting">
+							<div class="form-group">
+								<label for="questionone">(select a category):</label>
+								<select class="form-control text-center" name="question" id="questionone">
+									<option>Math</option>
+									<option>Science</option>
+									<option>English</option>
+									<option>History</option>
+								</select>
+							</div>
+							<div class="form-group">
+								<input type="submit" value="Next" id="continue" class="btn btn-success">
+
+							</div>
+						</div>
+					</form>
+					
+				</div>
+			</div>
+		</div>	
+	</div>
+</div>
+</body>
+
+
 
 
