--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,54 @@
+<style>
+	.row {
+		padding-top: 40px;
+	}
+
+	.img-circle {
+		padding: 10px;
+		margin-left: 65px;
+	}
+
+	#box1 {
+		width: 380px;
+		height: 500px;
+		display: inline-block;
+	}
+
+	#box2 {
+		margin-left: 30px;
+	}
+
+	.container {
+		margin: 0px;
+		height: 800px;
+		width: auto;
+	}
+
+	.container-fluid {
+		padding: 10px;
+	}
+
+	.navbar1 {
+		height: 300px;
+		width: 250px;
+	}
+
+	#content {
+		display: inline-block;
+		vertical-align: top;
+		width: 700px;
+		margin-left: 200px;
+		margin-right: 200px;
+		margin-top: 85px;
+	}
+</style>
+
 <div class="jumbotron">
 	<div class="container">
-		<div class="row">
-			<h1>Welcome, <%= @user.first_name %> <%= @user.last_name %></h1>
-			<div class="col-md-4">
-				<img src="..." alt="..." class="img-circle">
-				<nav class="navbar navbar-default">
+		<div id="box1" class="row">
+			<div id="box2" class="col-md-4">
+				<img src="http://www.radicallyrics.com/wp-content/uploads/2015/05/ASAP-Rocky.jpg" alt="prof pic" class="img-circle" width="140" height="140">
+				<nav class="navbar1 navbar-default">
 				  <div class="container-fluid">
 				    
 				    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,6 +69,12 @@
 			</div>
 			<div class="col-md-8">
 
+			</div>
+		</div>
+		<div id="content">
+			<div class="panel panel-info">
+				<div class="panel-heading">My Contributions</div>
+				<div class="panel-body">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. lroe lroem lorem blablabhalbhlahblahblahbl testin g123 123 123</div>
 			</div>
 		</div>
 	</div>	
